--- a/contact/index.html
+++ b/contact/index.html
@@ -151,37 +151,35 @@
 
 
 
-<div class="wp-block-button is-style-fill"><a class="wp-block-button__link has-contrast-color has-primary-background-color has-text-color has-background wp-element-button" href="https://www.commercialcafe.com/commercial-property/us/ma/westborough/westborough-mill/" target="_blank" rel="noreferrer noopener">More about 69 Milk Street</a></div>
+<div class="wp-block-button is-style-fill"><a class="wp-block-button__link has-contrast-color has-primary-background-color has-text-color has-background wp-element-button" href="https://www.commercialcafe.com/commercial-property/us/ma/westborough/westborough-mill/">More about 69 Milk Street</a></div>
 </div>
 </div>
 </div>
 
 
 
-<div class="wp-block-columns alignwide full-width-mobile contact-row has-background is-layout-flex wp-container-22" style="background-color:/#8c8c8c;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">
+<div class="wp-block-columns alignwide full-width-mobile contact-row has-background is-layout-flex wp-container-22" style="background-color:/#fafafa6b;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">
 <div class="wp-block-column is-layout-flow" style="padding-top:0;padding-right:0;padding-bottom:0;padding-left:0;flex-basis:50%">
 <div class="wp-block-group has-global-padding is-layout-constrained" style="padding-top:var(--wp--preset--spacing--30);padding-right:var(--wp--preset--spacing--30);padding-bottom:var(--wp--preset--spacing--30);padding-left:var(--wp--preset--spacing--30)">
-<form action="/contact/#wpcf7-f341-p10-o1" method="post" class="wpcf7-form init" aria-label="Contact form" novalidate="novalidate" data-status="init" netlify>
-<div style="display: none;">
-<input type="hidden" name="_wpcf7" value="341">
-<input type="hidden" name="_wpcf7_version" value="5.7.4">
-<input type="hidden" name="_wpcf7_locale" value="en_US">
-<input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f341-p10-o1">
-<input type="hidden" name="_wpcf7_container_post" value="10">
-<input type="hidden" name="_wpcf7_posted_data_hash" value="">
+<form netlify id="contact-form">
+<div class="contact-form">
+    <div class="formbuilder-text form-group field-your-name">
+        <label for="your-name" class="formbuilder-text-label">Your Name<span class="formbuilder-required">*</span></label>
+        <input type="text" placeholder="First and Last" class="form-control" name="your-name" access="false" maxlength="50" id="your-name" required="required" aria-required="true">
+    </div>
+    <div class="formbuilder-text form-group field-your-email">
+        <label for="your-email" class="formbuilder-text-label">Your Email Address<span class="formbuilder-required">*</span></label>
+        <input type="text" placeholder="email@domain.com" class="form-control" name="your-email" access="false" maxlength="50" id="your-email" required="required" aria-required="true">
+        <span class="form-error-email">Email must follow the format of <strong>email@domain.com</strong></span>
+    </div>
+    <div class="formbuilder-textarea form-group field-your-message">
+        <label for="your-message" class="formbuilder-textarea-label">Your Message<span class="formbuilder-required">*</span></label>
+        <textarea type="textarea" class="form-control" name="your-message" access="false" maxlength="300" rows="6" id="your-message" required="required" aria-required="true"></textarea>
+    </div>
+    <div class="formbuilder-button form-group field-submit-button">
+        <button type="submit" class="btn-default btn" name="submit-button" access="false" style="/contact/default" id="submit-button">Submit</button>
+    </div>
 </div>
-<p><label> Your Name*<br>
-<span class="wpcf7-form-control-wrap" data-name="your-name"><input size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" autocomplete="name" aria-required="true" aria-invalid="false" value="" type="text" name="your-name"></span> </label>
-</p>
-<p><label> Your Email*<br>
-<span class="wpcf7-form-control-wrap" data-name="your-email"><input size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" autocomplete="email" aria-required="true" aria-invalid="false" value="" type="email" name="your-email"></span> </label>
-</p>
-<p><label> Your Message*<br>
-<span class="wpcf7-form-control-wrap" data-name="your-message"><textarea cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false" name="your-message"></textarea></span> </label>
-</p>
-<p><input class="wpcf7-form-control has-spinner wpcf7-submit" type="submit" value="Submit"><span class="wpcf7-spinner"></span>
-</p>
-<div class="wpcf7-response-output" aria-hidden="true"></div>
 </form>
 </div>
 </div>
