--- a/services/index.html
+++ b/services/index.html
@@ -142,11 +142,11 @@
 
 
 
-<p class="has-text-align-center has-medium-font-size" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-right:var(--wp--preset--spacing--60);padding-left:var(--wp--preset--spacing--60)">Below is&nbsp;the list of companies associated with our members. &nbsp;</p>
+<p class="has-text-align-center has-medium-font-size" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-right:0;padding-left:0">Below is&nbsp;the list of companies associated with our members. &nbsp;</p>
 
 
 
-<p class="has-text-align-center has-small-font-size" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-right:var(--wp--preset--spacing--70);padding-left:var(--wp--preset--spacing--70)">(Click a business card to proceed to the website.)</p>
+<p class="has-text-align-center has-small-font-size" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-right:0;padding-left:0">(Click a business card to proceed to the website.)</p>
 
 
 
@@ -302,7 +302,7 @@
 
 
 
-<p class="has-text-align-center has-contrast-color has-text-color has-medium-font-size"><strong>Jami Eycleshymer</strong></p>
+<p class="has-text-align-center has-contrast-color has-text-color has-medium-font-size"><strong>Marc Schmelkin</strong></p>
 </div>
 </div></a>
 
