Homepage Three Col

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 
 
-<div class="wp-block-columns alignwide full-width-mobile has-contrast-color has-base-background-color has-text-color has-background has-source-serif-pro-font-family is-layout-flex wp-container-20">
+<div class="wp-block-columns alignwide full-width-mobile home-three-col has-contrast-color has-base-background-color has-text-color has-background has-source-serif-pro-font-family is-layout-flex wp-container-20">
 <div class="wp-block-column is-layout-flow">
 <h2 class="wp-block-heading has-system-font-font-family has-large-font-size" style="text-transform:uppercase"><strong>About Us</strong></h2>
 
@@ -197,7 +197,7 @@
 
 
 
-<ul>
+<ul class="home-service-list">
 <li><em>Residential&nbsp;Mortgage</em></li>
 
 
@@ -227,6 +227,10 @@
 
 
 <li><em>Graphic Design / Brand​ing</em></li>
+
+
+
+<li><em>Web Development</em></li>
 
 
 
