referrals new tab

--- a/services/index.html
+++ b/services/index.html
@@ -70,7 +70,7 @@
 <li style="font-size: 14px;" class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/members/"><span class="wp-block-navigation-item__label">Members</span></a></li>
 <li style="font-size: 14px;" class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/services/" aria-current="page"><span class="wp-block-navigation-item__label">Services</span></a></li>
 <li style="font-size: 14px;" class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/contact/"><span class="wp-block-navigation-item__label">Contact</span></a></li>
-<li style="font-size: 14px;" class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/referrals/"><span class="wp-block-navigation-item__label">Referrals</span></a></li>
+<li style="font-size: 14px;" class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/referrals/" target="_blank"><span class="wp-block-navigation-item__label">Referrals</span></a></li>
 </ul>
 						</div>
 					</div>
