--- a/referrals/index.html
+++ b/referrals/index.html
@@ -69,7 +69,7 @@
 <li style="font-size: 14px;" class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/members/"><span class="wp-block-navigation-item__label">Members</span></a></li>
 <li style="font-size: 14px;" class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/services/"><span class="wp-block-navigation-item__label">Services</span></a></li>
 <li style="font-size: 14px;" class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/contact/"><span class="wp-block-navigation-item__label">Contact</span></a></li>
-<li style="font-size: 14px;" class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/referrals/" aria-current="page"><span class="wp-block-navigation-item__label">Referrals</span></a></li>
+<li style="font-size: 14px;" class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/referrals/" aria-current="page" target="_blank"><span class="wp-block-navigation-item__label">Referrals</span></a></li>
 </ul>
 						</div>
 					</div>
